--- a/ui/app/components/app-card/deployment.hbs
+++ b/ui/app/components/app-card/deployment.hbs
@@ -1,76 +1,27 @@
-{{#if @isLatest}}
-<div class="app-card-item app-card-item--latest">
+<div
+  data-test-app-card-deployment
+  class="app-card-item app-card-item--latest"
+>
   <LinkTo @route="workspace.projects.project.app.deployment" @models={{array @model.id }}>
-    <p>
+    <p class="app-card-item__top-line">
       <b class="badge badge--version">v{{@model.sequence}}</b>
       <code>{{truncate @model.id 8 false}}</code>
+      {{#if (not-eq @model.status.state 2)}}
+        <OperationStatusIndicator @status={{@model.status}} />
+      {{/if}}
     </p>
-    <small>
+    <small class="app-card-item__second-line">
       <Pds::Icon @type={{icon-for-component @model.component.name}} class="icon" />
-      <span>{{if (eq @model.status.state 1) 'Deploying' 'Deployed'}} by
-        <b>{{component-name @model.component.name}} </b>
-        {{#if (eq @model.status.state 1)}}
-        (Started {{date-format-distance-to-now @model.status.startTime.seconds }})
-        {{else}}
-        {{date-format-distance-to-now @model.status.completeTime.seconds }}
-        {{/if}}
-      </span>
+      <StatusReportIndicator @statusReport={{@model.statusReport}} />
     </small>
-  </LinkTo>
-  {{#if @model.statusReport}}
-    {{#let @model.statusReport.health as |health|}}
-      <StatusBadge
-        @state={{health.healthStatus}}
-        @message={{health.healthMessage}}
-        @iconOnly={{true}}
-      />
-    {{/let}}
-  {{/if}}
-  {{#if @model.preload.deployUrl}}
-  <ExternalLink
-    href="https://{{@model.preload.deployUrl}}"
-    title="https://{{@model.preload.deployUrl}}"
-    class="button button--secondary"
-  >
-    <Pds::Icon @type="exit" class="icon" />
-  </ExternalLink>
-  {{/if}}
-</div>
-{{else}}
-<li class="app-card-item">
-  <LinkTo @route="workspace.projects.project.app.deployment" @models={{array @model.id}}>
-    <p>
-      <b class="badge badge--version">v{{@model.sequence}}</b>
-      <code>{{truncate @model.id 8 false}}</code>
-    </p>
-    <small>
-      <Pds::Icon @type={{icon-for-component @model.component.name}} class="icon" />
-      <span>
-        {{#if (eq @model.status.state 1)}}
-          Started {{date-format-distance-to-now @model.status.startTime.seconds }}
-        {{else}}
-          {{date-format-distance-to-now @model.status.completeTime.seconds }}
-        {{/if}}
-      </span>
-    </small>
-    {{#if @model.statusReport}}
-      {{#let @model.statusReport.health as |health|}}
-        <StatusBadge
-          @state={{health.healthStatus}}
-          @message={{health.healthMessage}}
-          @iconOnly={{true}}
-        />
-      {{/let}}
-    {{/if}}
   </LinkTo>
   {{#if @model.preload.deployUrl}}
     <ExternalLink
       href="https://{{@model.preload.deployUrl}}"
       title="https://{{@model.preload.deployUrl}}"
-      class="button button--secondary button--compact"
+      class="button button--secondary"
     >
       <Pds::Icon @type="exit" class="icon" />
     </ExternalLink>
   {{/if}}
-</li>
-{{/if}}
+</div>
